[package]
name = "Roulette-Protocol"
version = "0.1.5"
description = "Decentralized Roulette Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_roulette"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
sha2 = "0.10.8"
bytemuck_derive = "=1.8.1"
hex = "0.4.3"
solana-security-txt = "1.1.1"